--- a/common/pom.xml
+++ b/common/pom.xml
@@ -15,13 +15,15 @@
     <modules>
         <module>common_util</module>
         <module>service_util</module>
+        <module>rabbit_util</module>
+        <module>common_util</module>
     </modules>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <scope>provided </scope>
+            <scope>provided</scope>
         </dependency>
 
         <!--mybatis-plus-->
@@ -45,6 +47,11 @@
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
