--- a/common/rabbit_util/pom.xml
+++ b/common/rabbit_util/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>common_util</artifactId>
+    <artifactId>rabbit_util</artifactId>
 
 
 </project>
