--- a/hospital_manage/pom.xml
+++ b/hospital_manage/pom.xml
@@ -3,13 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>common</artifactId>
+        <artifactId>yygh_parent</artifactId>
         <groupId>com.atguigu</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>common_util</artifactId>
+    <artifactId>hospital_manage</artifactId>
+    <packaging>pom</packaging>
+    <version>1.0</version>
 
+    <dependencies>
+
+    </dependencies>
 
 </project>
