--- a/service/pom.xml
+++ b/service/pom.xml
@@ -14,6 +14,15 @@
     <version>1.0</version>
     <modules>
         <module>service_user</module>
+        <module>service_hosp</module>
+        <module>service-cmn</module>
+        <module>service_hosp</module>
+        <module>service_order</module>
+        <module>service_oss</module>
+        <module>service_sms</module>
+        <module>service_statistics</module>
+        <module>service_task</module>
+        <module>service_user</module>
     </modules>
     <dependencies>
         <dependency>
