--- a/service/service_hosp/pom.xml
+++ b/service/service_hosp/pom.xml
@@ -3,13 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>common</artifactId>
+        <artifactId>service</artifactId>
         <groupId>com.atguigu</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>common_util</artifactId>
+    <artifactId>service_hosp</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>service_order_client</module>
+    </modules>
 
 
 </project>
